feat: created endpoint to logout all sessions except the current
